--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,24 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   <script src="https://apis.google.com/js/platform.js"></script>
+  <script>
+    window.fbAsyncInit = function () {
+      FB.init({
+        appId: '%REACT_APP_FACEBOOK_APP_ID%',
+        autoLogAppEvents: true,
+        xfbml: true,
+        version: 'v2.10'
+      });
+    };
+
+    (function (d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) { return; }
+      js = d.createElement(s); js.id = id;
+      js.src = "https://connect.facebook.net/en_US/sdk.js";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+  </script>
 </body>
 
 </html>
